--- a/src/App.css
+++ b/src/App.css
@@ -66,18 +66,20 @@ main {
     }
   }
 
-  .editor_container {
+  .editor_container,
+  pre {
     margin-inline: auto;
-    width: 210mm;
+    min-width: 400px;
+    width: max-content;
     min-height: 500px;
     border: 1px solid #00000020;
     border-radius: 0.5rem;
     background-color: var(--text_area);
-    padding: 1rem;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
     line-height: 1.5rem;
     text-align: justify;
-    white-space: pre-wrap;
+    padding: 1rem;
+    text-wrap: nowrap;
 
     &:hover,
     &:focus {
