--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ main {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .container {
@@ -67,10 +70,12 @@ main {
   }
 
   .editor_container,
+  .response_container,
   pre {
     margin-inline: auto;
     min-width: 400px;
-    width: max-content;
+    width: 100%;
+    max-width: 1280px;
     min-height: 500px;
     border: 1px solid #00000020;
     border-radius: 0.5rem;
@@ -80,6 +85,7 @@ main {
     text-align: justify;
     padding: 1rem;
     text-wrap: nowrap;
+    overflow: hidden;
 
     &:hover,
     &:focus {
@@ -93,11 +99,47 @@ main {
   }
 
   .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding-block: 1rem;
+
+    button {
+      height: 40px;
+      padding-inline: 1rem;
+      border-radius: 0.5rem;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      background-color: var(--green);
+      color: #fff;
+
+      &:hover {
+        border: none;
+        outline: none;
+      }
+    }
+
     p {
       text-align: right;
       color: gray;
       user-select: none;
+    }
+  }
+}
+
+.container:has(.response_container) {
+  padding-block: 1rem;
+
+  .response_container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    text-wrap: wrap;
+
+    h2 {
+      color: dimgray;
     }
   }
 }
