--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,42 @@ main {
   gap: 2rem;
 }
 
+.main_header {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 864px;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  h1 {
+    color: transparent;
+    background-image: linear-gradient(90deg, #2563eb, #059669);
+    background-clip: text;
+    -webkit-background-clip: text;
+    font-weight: 800;
+  }
+
+  p {
+    color: #374151;
+    font-size: large;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    li {
+      color: #4b5563;
+      font-weight: 500;
+    }
+  }
+}
+
 .container {
   width: 100%;
   max-width: max-content;
@@ -16,6 +52,7 @@ main {
   border: 1px solid #00000020;
   border-radius: 1rem;
   background-color: #fff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   .header {
     padding-block: 1rem;
@@ -28,6 +65,7 @@ main {
     }
 
     .editor_settings {
+      user-select: none;
       button {
         all: unset;
         cursor: pointer;
